--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
       </header>
       <main>
-        
+        <div class="information-container">
           <div class="titre-hebergement">
             <h2 class="section-titre-hebergement">
               Trouver votre hébergement pour des vacances de rêve
@@ -82,7 +82,7 @@
             <i class="fas fa-info fa-sm icone-information"></i>
             <p>Plus de 500 logements sont disponible dans cette ville</p>
           </div>
-        
+        </div>
 
         <div class="hebergements-and-populaires">
           <!-- Partie Hébergements -->
