Correction du code CSS sur le footer (tous device) et pour le mobile l'icone Loupe a été mis en position relative pour coller à la maquette Figma et body mis a 'display: inline;' pour éviter bordure à droite

--- a/index.html
+++ b/index.html
@@ -357,8 +357,9 @@
           </section>
         </div>
 
+        <!-- Partie activities -->
         <section class="section-activities" id="Activites">
-          <h2 class="section-title">Activités à Marseille</h2>
+          <h2 class="section-title-activities">Activités à Marseille</h2>
           <div class="activities">
             <div class="activities-card">
               <a href="#">
